# MLOps

./: Dockerfile  README.md  app.py  docker-compose.yaml  grpc_client.py  grpc_server.py  json_examples.json  model_service.proto  model_service_pb2.py  model_service_pb2_grpc.py  pyproject.toml  test_app.py
.dvc/: config
app/: pyproject.toml
app/app_models/: app.py  models.py  some_json
data/: example_data.json
src/: app.py  test_app.py
src/helpers/: create_models.py  save_minio.py  save_model_minio.py  typing_models.py
