[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Svetlana <svet.karimova2012@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
grpcio = "^1.59.2"
flask = "^3.0.0"
lightgbm = "^4.1.0"
pandas = "^2.1.2"
catboost = "^1.2.2"
scikit-learn = "^1.3.2"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
